Fixed "link gap" in icon_ and button_url.

--- a/public/stylesheets/sass/typo.sass
+++ b/public/stylesheets/sass/typo.sass
@@ -67,7 +67,7 @@ span.tag
 img.icon
   border: none
   vertical-align: middle
-  margin-right: 4px
+  margin-right: 6px
 
 span.icon_link
   padding: 6px 9px
